pass some tests
